# spa-python

./: .gitignore  README.md  push_checks.sh  pyproject.toml  requirements.txt  run-app  setup.py
.github/workflows/: ci.yml
docs/: README.md  application_icon_guide.md  architecture.md  performance.md
docs/api/: modules.md
docs/development/: coding_standards.md  contributing.md  setup.md  testing.md  using_mixins.md
docs/getting_started/: installation.md
docs/release_notes/: change_log.md
docs/user_guide/: features.md  troubleshooting.md
old_docs/: README.md  README_FIRST.md  project-estimate.txt  project-sketch.txt  readme.txt  request_for_proposal.txt
src/: app_main_window.py  app_screen_util.py  app_signal_util.py  main.py  main_window.py
src/auth/: auth_service.py  authentication_service.py  base_auth_form.py
src/config/: application_settings.py
src/mixins/: submit_button_handler.py  submit_button_mixin.py
src/os_specific/: linux.py  macos.py  windows.py
src/packaging/: application_packager.py  linux_appdir_builder.py  packaging_config.py  preflight_checker.py  windows_installer.nsi
src/pages/: about_page.py  home_page.py  login_page.py  profile_page.py  register_page.py
src/tests/: test_auth.py
src/ui/: navigation_menu.py
